--- a/notebooks/volatility_signals.ipynb
+++ b/notebooks/volatility_signals.ipynb
@@ -1,20 +1,51 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "8130dd3a07d70607",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null,
    "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "# Go up one folder from /notebooks to project root\n",
+    "sys.path.append(os.path.abspath(\"..\"))\n",
+    "\n",
     "from config.load_env import load_keys\n",
     "\n",
-    "keys = load_keys()\n",
-    "print(keys[\"api_key\"])"
-   ],
-   "id": "8130dd3a07d70607"
+    "keys = load_keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e7714e2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "py311-smu",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
