--- a/notebooks/volatility_signals.ipynb
+++ b/notebooks/volatility_signals.ipynb
@@ -29,7 +29,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py311-smu",
+   "display_name": "QF635",
    "language": "python",
    "name": "python3"
   },
@@ -43,7 +43,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
