add historical code, generate the 3 csv, momentums strategy

--- a/notebooks/momentum_signals.ipynb
+++ b/notebooks/momentum_signals.ipynb
@@ -2,13 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "84ccadee",
+   "execution_count": 25,
+   "id": "00217141",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "import os\n",
     "import sys\n",
+    "from datetime import datetime, timedelta\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6a67d1dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Go up one folder from /notebooks to project root\n",
     "sys.path.append(os.path.abspath(\"..\"))\n",
@@ -17,11 +31,291 @@
     "\n",
     "keys = load_keys()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "36c3ad59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'17dc3abfee8572f2d2d9a3d1e6c3b0a7bdf5c7992edb93a380a7443cd1e2470b',\n",
+       " '9ce439d3f2a30e456a1eb24b2bd09019226e77e221928d4b043c9539e0d6280e'}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client = {keys['api_key'],keys['secret_key']}\n",
+    "client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "9efe9b5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fetch_3h_klines_half_year(client, symbol):\n",
+    "    end = datetime.utcnow()\n",
+    "    start = end - timedelta(days=180)\n",
+    "\n",
+    "    start_str = start.strftime('%Y-%m-%d %H:%M:%S')\n",
+    "    end_str = end.strftime('%Y-%m-%d %H:%M:%S')\n",
+    "\n",
+    "    klines = client.futures_klines(\n",
+    "        symbol=symbol,\n",
+    "        interval=client.KLINE_INTERVAL_3HOUR,\n",
+    "        start_str=start_str,\n",
+    "        end_str=end_str\n",
+    "    )\n",
+    "    return klines\n",
+    "\n",
+    "def get_file_logger(name: str, log_path: str):\n",
+    "    import logging\n",
+    "    logger = logging.getLogger(name)                # Get or create a logger with a unique name\n",
+    "    logger.setLevel(logging.INFO)                   # Set logging level (INFO, WARNING, ERROR, etc.)\n",
+    "    \n",
+    "    if not logger.handlers:                         # Prevent duplicate handlers if logger reused\n",
+    "        fh = logging.FileHandler(log_path)          # Log output directed to file at log_path\n",
+    "        fh.setLevel(logging.INFO)                   # Set the file handler's logging level\n",
+    "        formatter = logging.Formatter('%(asctime)s - %(levelname)s - %(message)s')\n",
+    "        fh.setFormatter(formatter)                  # Define format of log entries (timestamp, severity, message)\n",
+    "        logger.addHandler(fh)                       # Attach the file handler to the logger\n",
+    "    \n",
+    "    return logger                                    # Return configured logger\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    logger = get_file_logger(\"depth_logger\", \"price_depth_log.txt\")\n",
+    "    symbols = ['BTCUSDT', 'ETHUSDT', 'XRPUSDT']\n",
+    "\n",
+    "    for symbol in symbols:\n",
+    "        try:\n",
+    "            klines = fetch_3h_klines_half_year(client, symbol)\n",
+    "            logger.info(f\"{symbol} | Fetched {len(klines)} historical 3h candles\")\n",
+    "\n",
+    "            for kline in klines[:5]:  # print first 5 candles\n",
+    "                open_time = datetime.utcfromtimestamp(kline[0] / 1000.0)\n",
+    "                logger.info(f\"{symbol} | {open_time} | O:{kline[1]} H:{kline[2]} L:{kline[3]} C:{kline[4]} V:{kline[5]}\")\n",
+    "        except Exception as e:\n",
+    "            logger.error(f\"{symbol} | Error fetching historical data: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03a59378",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class BaseSignalStrategy(bt.Strategy):\n",
+    "    params = (('record_signals', True),)\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.signal = 0  # 当前信号\n",
+    "        self.signals = []  # 记录历史信号\n",
+    "\n",
+    "    def next(self):\n",
+    "        if self.record_signals:\n",
+    "            self.signals.append({\n",
+    "                'date': self.data.datetime.date(0),\n",
+    "                'signal': self.signal\n",
+    "            })\n",
+    "\n",
+    "    def get_signals_df(self):\n",
+    "        return pd.DataFrame(self.signals).set_index('date')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48ead78b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# --------------------------\n",
+    "# 独立指标策略（按需扩展）\n",
+    "# --------------------------\n",
+    "class RSIStrategy(BaseSignalStrategy):\n",
+    "    params = (('rsi_period', 14), ('oversold', 30), ('overbought', 70))\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.rsi = bt.indicators.RSI(self.data.close, period=self.p.rsi_period)\n",
+    "\n",
+    "    def next(self):\n",
+    "        if self.rsi < self.p.oversold:\n",
+    "            self.signal = 1  # 买入信号\n",
+    "        elif self.rsi > self.p.overbought:\n",
+    "            self.signal = -1  # 卖出信号\n",
+    "        else:\n",
+    "            self.signal = 0\n",
+    "        super().next()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ac4e322",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class CCIStrategy(BaseSignalStrategy):\n",
+    "    params = (('cci_period', 20), ('oversold', -100), ('overbought', 100))\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.cci = bt.indicators.CCI(self.data, period=self.p.cci_period)\n",
+    "\n",
+    "    def next(self):\n",
+    "        if self.cci < self.p.oversold:\n",
+    "            self.signal = 1\n",
+    "        elif self.cci > self.p.overbought:\n",
+    "            self.signal = -1\n",
+    "        else:\n",
+    "            self.signal = 0\n",
+    "        super().next()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9888256f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "class MACDStrategy(BaseSignalStrategy):\n",
+    "    params = (('fast', 12), ('slow', 26), ('signal_period', 9))\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.macd = bt.indicators.MACD(\n",
+    "            self.data.close,\n",
+    "            period_me1=self.p.fast,\n",
+    "            period_me2=self.p.slow,\n",
+    "            period_signal=self.p.signal_period\n",
+    "        )\n",
+    "        self.crossover = bt.indicators.CrossOver(self.macd.macd, self.macd.signal)\n",
+    "\n",
+    "    def next(self):\n",
+    "        if self.crossover > 0:\n",
+    "            self.signal = 1  # 金叉买入\n",
+    "        elif self.crossover < 0:\n",
+    "            self.signal = -1  # 死叉卖出\n",
+    "        else:\n",
+    "            self.signal = 0\n",
+    "        super().next()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfdfdf36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class StochasticStrategy(bt.Strategy):\n",
+    "    params = (\n",
+    "        ('k_period', 14),    # %K计算周期\n",
+    "        ('d_period', 3),     # %D计算周期（%K的SMA）\n",
+    "        ('overbought', 80),  # 超买阈值\n",
+    "        ('oversold', 20),    # 超卖阈值\n",
+    "        ('use_trend_filter', True),  # 是否使用趋势过滤\n",
+    "    )\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        # 计算指标\n",
+    "        self.stoch = bt.indicators.Stochastic(\n",
+    "            self.data,\n",
+    "            period=self.p.k_period,\n",
+    "            period_dfast=self.p.d_period,\n",
+    "            upperband=self.p.overbought,\n",
+    "            lowerband=self.p.oversold\n",
+    "        )\n",
+    "        self.crossover = bt.indicators.CrossOver(self.stoch.lines.percK, self.stoch.lines.percD)\n",
+    "        \n",
+    "        # 趋势过滤（可选）\n",
+    "        if self.p.use_trend_filter:\n",
+    "            self.sma200 = bt.indicators.SMA(self.data.close, period=200)\n",
+    "\n",
+    "    def next(self):\n",
+    "        # 生成信号（1=买入，-1=卖出，0=无信号）\n",
+    "        signal = 0\n",
+    "        \n",
+    "        # 多头条件\n",
+    "        if (self.stoch.lines.percK[0] < self.p.oversold and \n",
+    "            self.crossover > 0 and \n",
+    "            (not self.p.use_trend_filter or self.data.close[0] > self.sma200[0])):\n",
+    "            signal = 1\n",
+    "        \n",
+    "        # 空头条件\n",
+    "        elif (self.stoch.lines.percK[0] > self.p.overbought and \n",
+    "              self.crossover < 0 and \n",
+    "              (not self.p.use_trend_filter or self.data.close[0] < self.sma200[0])):\n",
+    "            signal = -1\n",
+    "        \n",
+    "        # 记录信号（用于后续机器学习组合）\n",
+    "        self.signal = signal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dcfdbd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class MOMStrategy(BaseSignalStrategy):\n",
+    "    params = (('mom_period', 10), ('threshold', 0))\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.mom = bt.indicators.Momentum(self.data.close, period=self.p.mom_period)\n",
+    "\n",
+    "    def next(self):\n",
+    "        if self.mom > self.p.threshold:\n",
+    "            self.signal = 1  # 动量向上\n",
+    "        elif self.mom < -self.p.threshold:\n",
+    "            self.signal = -1  # 动量向下\n",
+    "        else:\n",
+    "            self.signal = 0\n",
+    "        super().next()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "py311-smu",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
