The key is covered.

--- a/notebooks/XIE_5Min_LiveAPI.ipynb
+++ b/notebooks/XIE_5Min_LiveAPI.ipynb
@@ -29,23 +29,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "abb1e928-0f72-43c3-a008-35bef0b89ac3",
+   "execution_count": 1,
+   "id": "ac8a8eca",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded keys: {'api_key': '3b7I9EEUdiZ5KEmQa7nQs0u0437vLTupisPYlN9Sf8THODi82YaEErKxZfKzfKrB', 'secret_key': 'sUt4KxkVRnBLaK4Fe4sP6gayWpHBajlmTkD1NuCp3DXJcYAIX9qYXCkDR8SByX1L'}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\nfrom binance.client import Client\\nkeys = load_keys()\\nprint(\"Loaded keys:\", keys)\\nclient = Client(keys[\\'api_key\\'], keys[\\'secret_key\\'])\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\"\n",
     "from binance.client import Client\n",
     "keys = load_keys()\n",
     "print(\"Loaded keys:\", keys)\n",
-    "client = Client(keys['api_key'], keys['secret_key'])"
+    "client = Client(keys['api_key'], keys['secret_key'])\n",
+    "\"\"\""
    ]
   },
   {
@@ -1059,9 +1064,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:talib-env]",
+   "display_name": "talib-env",
    "language": "python",
-   "name": "conda-env-talib-env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
